<resources>
    <string name="app_name">RePic</string>
    <string name="bottom_text">我是有底线的</string>
    <string name="hint_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password1">Password again </string>
    <string name="userName">LyXuAn</string>
    <string name="count">18</string>
    <string name="creation">作品</string>
    <string name="login">Log in</string>
    <string name="sign_up">sign up</string>
    <string name="square">square</string>
    <string name="create">create</string>
    <string name="personal">personal</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="crop">crop</string>
    <string name="splice">splice</string>
    <string name="save">save</string>


    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>
</resources>
