<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:id="@+id/edit_page">

  <SeekBar
    android:id="@+id/sb_vertical"
    android:layout_width="match_parent"
    android:layout_height="18dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.909"/>

  <Button
          android:id="@+id/btn_gallery"
          android:layout_width="56dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:text="@string/gallery"
          android:textSize="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/btn_splice" android:layout_marginTop="8dp"
          app:layout_constraintTop_toTopOf="parent"/>

  <Button
          android:id="@+id/btn_camera"
          android:layout_width="55dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_above="@+id/btn_gallery"
          android:layout_centerHorizontal="true"
          android:text="@string/camera"
          android:textSize="10dp"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

  <Button
          android:id="@+id/btn_crop"
          android:layout_width="55dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:text="@string/crop"
          android:textSize="10dp"
          app:layout_constraintStart_toEndOf="@+id/btn_camera" android:layout_marginTop="8dp"
          app:layout_constraintTop_toTopOf="parent"/>

  <Button
          android:id="@+id/btn_splice"
          android:layout_width="55dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:text="@string/splice"
          android:textSize="10dp"
          app:layout_constraintStart_toEndOf="@+id/btn_save_n_upload" android:layout_marginTop="8dp"
          app:layout_constraintTop_toTopOf="parent"/>

  <Button
          android:id="@+id/btn_save_n_upload"
          android:layout_width="55dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:text="@string/save"
          android:textSize="10dp"
          app:layout_constraintStart_toEndOf="@+id/btn_crop"
          android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
  <android.support.constraint.ConstraintLayout
          android:id="@+id/img_holder"
          android:layout_width="match_parent"
          android:layout_height="425dp"
          android:layout_marginTop="8dp"
          android:layout_marginStart="8dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.447">

    <ImageView
      android:id="@+id/iv_show"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:contentDescription="user selection"/>
  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>