<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal"
  android:orientation="horizontal"
  android:padding="@dimen/element_padding"
  android:id="@+id/personal_page">
    <com.rpgroup.bn.view.views.CircleImageView
      android:id="@+id/imgView_portrait_personal"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:src="@drawable/profile_pic1"
      android:layout_alignParentStart="true"
      android:layout_marginStart="15dp"
      android:layout_alignParentTop="true"
      android:layout_marginTop="50dp"/>
    <TextView
      android:id="@+id/tv_userName_personal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/imgView_portrait_personal"
      android:layout_alignParentEnd="true"
      android:text="@string/userName"
      android:textColor="#515151"
      android:textSize="20dp"
      android:layout_toEndOf="@+id/imgView_portrait_personal"
      android:layout_marginStart="11dp"/>

    <TextView
      android:id="@+id/tv_creationCount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/tv_userName_personal"
      android:layout_below="@+id/tv_userName_personal"
      android:paddingTop="10dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/count"
      android:textColor="#515151"
      android:textSize="20dp"/>
    <TextView
      android:id="@+id/tv_creationCountBelow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/tv_userName_personal"
      android:layout_below="@+id/tv_creationCount"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/creation"
      android:textColor="#707070"
      android:textSize="18dp"/>
    <View
      android:id="@+id/horizontal_line"
      android:layout_width="match_parent"
      android:layout_below="@+id/tv_creationCountBelow"
      android:layout_marginTop="10dp"
      android:layout_height="1dp"
      android:background="#707070"/>

    <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/PPswipeRefreshView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/horizontal_line">
        <!--SwipeRefrshLayout+RecyclerView实现刷新功能-->
        <android.support.v7.widget.RecyclerView
          android:id="@+id/PPrecyclerView"
          android:scrollbars="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
