<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#ffffff">

  <android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="225dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    app:passwordToggleEnabled="true">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/name_input_register"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_name"
      android:inputType="text"
      android:maxLines="1"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="275dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    app:passwordToggleEnabled="true">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/password_input_register"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      android:maxLines="1"
      />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="201dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    app:passwordToggleEnabled="true">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/password1_input_register"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password1"
      android:inputType="textPassword"
      android:maxLines="1"
      />
  </android.support.design.widget.TextInputLayout>
  <Button
    android:id="@+id/signUp_btn_register"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="133dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@color/colorBtn"
    android:text="sign up"
    android:textColor="#ffffff"/>
  <Button
    android:id="@+id/logIn_btn_register"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="57dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@color/colorBtn"
    android:text="Log in"
    android:textColor="#ffffff"/>

</RelativeLayout>